# langtonant_bevy

./: Cargo.toml
langton_plugin/: Cargo.toml
langton_plugin/src/: lib.rs
langton_plugin/src/resources/: ant.rs  mod.rs  tile_map.rs
langton_plugin/src/systems/: ant.rs  mod.rs
src/: main.rs
